--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<jwt>0.10.7</jwt>
 		<lombok>1.18.10</lombok>
 		<swagger>2.9.2</swagger>
 	</properties>
@@ -59,7 +60,6 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>${swagger}</version>
-
 		</dependency>
 
 		<dependency>
@@ -75,6 +75,25 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>${jwt}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>${jwt}</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>${jwt}</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
